--- a/ss7/Homework/style.css
+++ b/ss7/Homework/style.css
@@ -1,11 +1,14 @@
-
+*{
+    box-sizing: border-box;
+}
 li{
     list-style-type: none;
+    font-size: 100%;
 }
 .nav{
     display: flex;
     width: 100%;
-    height: 30px;
+    height: 6vh;
     flex-direction: row;
     justify-content:center;
     background-color: grey;
@@ -14,12 +17,12 @@ li{
 }
 .item{
     width: 10vw;
-    height: 30px;
+    height: 6vh;
     text-align: center;
     font-weight: bold ;
-    border: 1px solid;
+    border: 0.5px solid;
     background-color: grey;
-    box-sizing: border-box;
+    position: relative;
 }
 .item:hover{
     background-color:rgb(241, 237, 232);
@@ -29,20 +32,18 @@ a {
     color: black;
 }
 .sub-menu{
-    position: relative ;
-    top: 10px;
-    right: 41px;
+    position: absolute ;
+    top: 6vh;
+    right: 0vw;
     display: none;
 }
 .item-2{
     background-color:grey;
     width: 10vw;
-    height: 30px;
+    height: 6vh;
     text-align: center;
     font-weight: bold ;
-    border: 1px solid;
-    box-sizing: border-box;
-
+    border: 0.5px solid;
 }
 .item:hover .sub-menu{
     display: block;
@@ -51,13 +52,10 @@ a {
     background-color:rgb(241, 237, 232);
 }
 .sub-menu-2{
-    width: 40vw;
-    height: 30px;
     position: absolute;
-    left: 101%;
-    bottom: 0px;
+    left: 10vw;
+    top: 18vh;
     display: none;
-    box-sizing: border-box;
 }
 .item-2:hover .sub-menu-2{
     display: block;
@@ -65,11 +63,10 @@ a {
 .item-3{
     background-color:grey;
     width: 10vw;
-    height: 30px;
+    height: 6vh;
     text-align: center;
     font-weight: bold ;
-    border: 1px solid;
-    box-sizing: border-box;
+    border: 0.5px solid;
 }
 .item-3:hover{
     background-color: rgb(241, 237, 232);
@@ -78,10 +75,9 @@ a {
     width: 40vw;
     height: 30px;
     position: absolute;
-    left: 25%;
-    top: 300%;
+    left: 10vw;
+    top: 18vh;
     display: none;
-    box-sizing: border-box;
 }
 .item-3:hover .sub-menu-3{
     display:block;
@@ -89,11 +85,10 @@ a {
 .item-4{
     background-color:grey;
     width: 10vw;
-    height: 30px;
+    height: 6vh;
     text-align: center;
     font-weight: bold ;
-    border: 1px solid;
-    box-sizing: border-box;
+    border: 0.5px solid;
 }
 .item-4:hover{
     background-color:rgb(241, 237, 232);
